tests/ui/pin-macro/cant_access_internals.stderr
error[E0616]: field `pointer` of struct `Pin` is private
  --> $DIR/cant_access_internals.rs:11:30
   |
LL |     mem::take(phantom_pinned.pointer);
   |                              ^^^^^^^ private field

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0616`.
